--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -1,6 +1,13 @@
 @import url("https://fonts.googleapis.com/css?family=Poppins:300,400,500,500i,600,700,700i,800,800i,900&amp;display=swap");
 @import url("https://fonts.googleapis.com/css?family=Poppins:300,400,500,500i,600,700,700i,800,800i,900&amp;display=swap");
- 
+
+@font-face {
+  font-family: 'Product Sans';
+  font-style: normal;
+  font-weight: 400;
+  src: local('Open Sans'), local('OpenSans'), url(https://fonts.gstatic.com/s/productsans/v5/HYvgU2fE2nRJvZ5JFAumwegdm0LZdjqr5-oayXSOefg.woff2) format('woff2');
+}
+
 .flex-center-start {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -56,7 +63,7 @@
  
  
 body {
-  font-family: "Poppins", sans-serif;
+  font-family: "Product Sans";
   font-weight: normal;
   font-style: normal;
 }
@@ -110,7 +117,7 @@ button {
 
  
 h1, h2, h3, h4, h5 {
-  font-family: "Poppins", sans-serif;
+  font-family: "Product Sans";
   color: #131313;
 }
 
@@ -142,7 +149,7 @@ p {
   line-height: 26px;
   color: #808080;
   margin-bottom: 13px;
-  font-family: "Poppins", sans-serif;
+  font-family: "Product Sans";
 }
 
  
@@ -418,7 +425,7 @@ h3 {
   color: #131313;
   display: inline-block;
   padding: 18px 44px;
-  font-family: "Poppins", sans-serif;
+  font-family: "Product Sans";
   font-size: 14px;
   font-weight: 400;
   border: 0;
@@ -451,7 +458,7 @@ h3 {
   color: #FF0000;
   display: inline-block;
   padding: 16px 44px;
-  font-family: "Poppins", sans-serif;
+  font-family: "Product Sans";
   font-size: 16px;
   font-weight: 500;
   border: 0;
@@ -484,7 +491,7 @@ h3 {
   color: #fff;
   display: inline-block;
   padding: 18px 24px;
-  font-family: "Poppins", sans-serif;
+  font-family: "Product Sans";
   font-size: 14px;
   font-weight: 400;
   border: 0;
@@ -509,7 +516,7 @@ h3 {
   color: #fff;
   display: inline-block;
   padding: 16px 43px;
-  font-family: "Poppins", sans-serif;
+  font-family: "Product Sans";
   font-size: 16px;
   font-weight: 500;
   border: 0;
@@ -551,7 +558,7 @@ h3 {
   font-size: 15px;
   text-transform: uppercase;
   font-weight: 500;
-  font-family: "Poppins", sans-serif;
+  font-family: "Product Sans";
   margin-bottom: 22px;
 }
 
@@ -569,7 +576,7 @@ h3 {
   font-size: 15px;
   text-transform: uppercase;
   font-weight: 400;
-  font-family: "Poppins", sans-serif;
+  font-family: "Product Sans";
   margin-bottom: 22px;
 }
 
@@ -888,7 +895,7 @@ div#sticky-header {
   font-weight: 600;
   display: inline-block;
   padding: 35px 23px 35px 23px;
-  font-family: "Poppins", sans-serif;
+  font-family: "Product Sans";
   position: relative;
   text-transform: capitalize;
 }
@@ -1473,7 +1480,7 @@ div#sticky-header {
 
  
 .about_area .about_thumb .exprience span {
-  font-family: "Poppins", sans-serif;
+  font-family: "Product Sans";
   font-weight: 400;
   font-size: 14px;
   text-transform: uppercase;
