ubah foto slider dan logo

--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -1072,7 +1072,7 @@ div#sticky-header {
 
  
 .slider_bg_1 {
-  background: linear-gradient(0deg, rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)),url(../img/background-img/kota-malang.jpg);
+  background: linear-gradient(0deg, rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)),url(../img/background-img/rektorat.png);
 }
 
  
