add keynote, foot banner, slide banner

--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -2250,7 +2250,7 @@ div#sticky-header {
 
  
 .footer_bg_1 {
-  background-image: url(../img/banner/footer_bg_1.png);
+  background-image: url(../img/background-img/foot-banner.png);
 }
 
  
